Updated the icon; correctly name the class.

--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
   "description": "Brings Visual Student Roster feature to MyWSU",
   "manifest_version": 3,
   "name": "Visual Student Roster",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage_url": "https://github.com/jmhammond/visual-student-roster",
   "icons": {
-    "48": "icons/roster.png"
+    "64": "icons/roster-64.png"
   },
   "action": {
     "default_popup": "popup.html"
